metadata/objects/asb_ListingExtension__c.object
<CustomObject>
    <description>Description and requirements information for a listing.</description>
    <fields>
        <fullName>asb_App__c</fullName>
        <description>The app to which the listing search text belongs.</description>
        <formula>asb_Listing__r.asb_App__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The app to which the listing search text belongs.</inlineHelpText>
        <label>App</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asb_Listing__c</fullName>
        <description>The listing to which the search text belongs.</description>
        <inlineHelpText>The listing to which the search text belongs.</inlineHelpText>
        <label>Listing</label>
        <referenceTo>asb_Listing__c</referenceTo>
        <relationshipLabel>ListingExtensions</relationshipLabel>
        <relationshipName>ListingExtensions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>searchText__c</fullName>
        <description>The long text that is being searched.</description>
        <inlineHelpText>The long text that is being searched.</inlineHelpText>
        <label>Search Text</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Listing Extension</label>
    <nameField>
        <displayFormat>LE-{0000}</displayFormat>
        <label>ListingExtension Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Listing Extensions</pluralLabel>
    <recordTypes>
        <fullName>Description</fullName>
        <active>true</active>
        <description>The listing description.</description>
        <label>Description</label>
    </recordTypes>
    <recordTypes>
        <fullName>Requirements</fullName>
        <active>true</active>
        <description>The listing requirements</description>
        <label>Requirements</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>